<resources>
    <string name="app_name">MiraclinkClothes</string>
    <string name="connect">connect</string>
    <string name="send">send</string>
    <string name="select_device">选择设备</string>
    <string name="scanning">scanning</string>
    <string name="paired">paired</string>
    <string name="scan">scan</string>
    <string name="cancel">cancel</string>
    <string name="user_list">记录</string>
    <string name="user_info">患者</string>
    <string name="user_check">训练</string>
    <string name="settings">设置</string>

    <string name="user_id">I D</string>
    <string name="user_name">姓名</string>
    <string name="user_age">年龄</string>
    <string name="user_sex">性别</string>
    <string name="user_height">身高</string>
    <string name="user_weight">体重</string>
    <string name="device_id">设备ID:</string>
    <string name="save">保存</string>
    <string name="add">添加</string>

    <string name="device_select">设备选择</string>
    <string name="time">时间</string>
    <string name="strong">强度</string>
    <string name="rate">频率</string>
    <string name="compose">组合</string>
    <string name="compose_alone">单一频率</string>
    <string name="compose1">组合一</string>
    <string name="compose2">组合二</string>
    <string name="compose3">组合三</string>
    <string name="compose4">组合四</string>
    <string name="mode">模式</string>
    <string name="mode1">混合锻炼模式</string>
    <string name="mode2">脂肪燃烧模式</string>
    <string name="mode3">慢跑模式</string>
    <string name="mode4">肌肉模式</string>
    <string name="mode5">脂肪加速燃烧模式</string>

    <string name="arm_text">arm</string>
    <string name="arm_zero">0%</string>
    <string name="arm">arm:%d</string>
    <string name="chest">chest:%d</string>
    <string name="stomach">stomach:%d</string>
    <string name="leg">leg:%d</string>
    <string name="leg_text">leg</string>
    <string name="neck">neck:%d</string>
    <string name="backback">back:%d</string>
    <string name="rear">rear:%d</string>
    <string name="rate_text">频率:%d</string>

    <string name="init_edit_id">请输入ID号</string>
    <string name="init_edit_name">请输入患者姓名</string>
    <string name="init_edit_age">请输入患者年龄</string>
    <string name="init_edit_sex">男</string>
    <string name="init_edit_height">单位cm</string>
    <string name="init_edit_weight">单位kg</string>
    <string name="init_edit_device_id">请选择ID号</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="age">岁</string>
    <string name="cm_text">cm</string>
    <string name="kg_text">kg</string>
    <string name="id_text">ID:</string>

    <string name="program">方案</string>
    <string name="class_hour">课时</string>
    <string name="balance">余额</string>

    <string name="id_null_text">ID不能为空</string>
    <string name="name_null_text">名字不能为空</string>
    <string name="age_null_text">年龄不能为空</string>
    <string name="height_null_text">身高不能为空</string>
    <string name="weight_null_text">体重不能为空</string>

    <string name="user_null_text">请先新建或选择用户</string>
    <string name="time_null_text">请先选择训练时间</string>
    <string name="strong_null_text">请选择训练强度</string>
    <string name="rate_null_text">请先选择训练频率</string>
    <string name="compose_null_text">请先选择训练组合</string>
    <string name="mode_null_text">请先选择训练模式</string>

    <string name="user_checking">用户使用中</string>
    <string name="user_checking_max">已选择最大用户数量</string>
    <string name="ble_no_connect">设备未连接，请在设置中选择设备</string>
    <string name="not_check_user">未选择用户</string>
    <string name="not_ble">设备未连接</string>

    <string name="permission_rationale">开始使用服务前需要允许下列应用程序权限：\n一、读写外部储存装置的权限，\n　　让你可以挑选照片。\n二、取得精确位置的权限，\n　　蓝牙必要的辅助权限。 </string>

    <string name="down_new_version">有新的软件版本可更新</string>
    <string name="down_tips">更新内容:</string>
    <string name="down_ok">更新</string>
    <string name="down_next">下次</string>
    <string name="down_this_version">当前版本：</string>
    <string name="down_update_version">更新版本：</string>
    <string name="down_enforce">此版本有重要更新，必须更新软件才能使用！</string>
    <string name="downing">正在下载更新...</string>
    <string name="down_check_failed">检查更新失败!</string>

</resources>
