<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/down_new_version"
        android:textColor="@color/enterprise_azure"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/down_tips"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textDialogDownTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_this_version"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textThisVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/down_update_version"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textUpdateVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textDialogDownEnforce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/down_enforce"
        android:textColor="@color/enterprise_smokeorange"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/btDialogDownCancel"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:background="@drawable/bg_bt_save"
            android:text="@string/down_next"
            android:textColor="@color/enterprise_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btDialogDownOk"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:layout_marginStart="220dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_bt_save"
            android:text="@string/down_ok"
            android:textColor="@color/enterprise_white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>