<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutUserSettingsFragmentTitle"
        android:layout_width="0dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="@color/title_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutUserSettingsFragmentTitle">

        <com.miraclink.widget.SettingLineLayout
            android:id="@+id/layoutUserSettingFragmentDeviceSelect"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            app:funText="@string/device_select"
            app:imageMoreSetting="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.miraclink.widget.SettingLineLayout
            android:id="@+id/layoutUserSettingFragmentTimeSelect"
            android:layout_width="0dp"
            android:layout_height="45dp"
            app:funText="@string/time"
            app:imageMoreSetting="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutUserSettingFragmentDeviceSelect" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textUserSettingFragmentStrong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginTop="10dp"
            android:text="@string/strong"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layoutUserSettingFragmentTimeSelect" />

        <com.miraclink.widget.ScrollerLayout
            android:id="@+id/scrollerUserSettingsFragmentStrong"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="@dimen/info_start_layout_margin"
            android:background="@drawable/bg_time_scroller"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUserSettingFragmentStrong">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.miraclink.widget.ScrollerLayout>

        <View
            android:id="@+id/viewUserSettingFragmentLine1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/enterprise_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scrollerUserSettingsFragmentStrong" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textUserSettingFragmentRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginTop="10dp"
            android:text="@string/rate"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewUserSettingFragmentLine1" />

        <RadioGroup
            android:id="@+id/rgUserSettingFragmentRate"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginEnd="@dimen/info_start_layout_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUserSettingFragmentRate">

            <RadioButton
                android:id="@+id/rbUserSettingFragmentRate1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentRate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="2" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentRate3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:text="3" />

        </RadioGroup>

        <View
            android:id="@+id/viewUserSettingFragmentLine2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/enterprise_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgUserSettingFragmentRate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textUserSettingFragmentCompose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginTop="10dp"
            android:text="@string/compose"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewUserSettingFragmentLine2" />

        <RadioGroup
            android:id="@+id/rgUserSettingFragmentCompose"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginEnd="@dimen/info_start_layout_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUserSettingFragmentCompose">

            <RadioButton
                android:id="@+id/rbUserSettingFragmentCompose1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:text="@string/compose_alone" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentCompose2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="-20dp"
                android:text="@string/compose1" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentCompose3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="-20dp"
                android:text="@string/compose2" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentCompose4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-150dp"
                android:layout_marginTop="10dp"
                android:text="@string/compose3" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentCompose5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-199dp"
                android:layout_marginTop="10dp"
                android:text="@string/compose4" />

        </RadioGroup>

        <View
            android:id="@+id/viewUserSettingFragmentLine3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/enterprise_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgUserSettingFragmentCompose" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textUserSettingFragmentMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginTop="10dp"
            android:text="@string/mode"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewUserSettingFragmentLine3" />

        <RadioGroup
            android:id="@+id/rgUserSettingFragmentMode"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginEnd="@dimen/info_start_layout_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textUserSettingFragmentMode">

            <RadioButton
                android:id="@+id/rbUserSettingFragmentMode1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:text="@string/mode1" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentMode2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-20dp"
                android:text="@string/mode2" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentMode3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-20dp"
                android:text="@string/mode3" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentMode4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-150dp"
                android:layout_marginTop="10dp"
                android:text="@string/mode4" />

            <RadioButton
                android:id="@+id/rbUserSettingFragmentMode5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-260dp"
                android:layout_marginTop="10dp"
                android:text="@string/mode5" />
        </RadioGroup>

        <View
            android:id="@+id/viewUserSettingFragmentLine4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/enterprise_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rgUserSettingFragmentMode" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btSettingsFragmentSave"
            android:layout_width="330dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/info_start_layout_margin"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_bt_noselect"
            android:text="@string/save"
            android:textColor="@color/enterprise_white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewUserSettingFragmentLine4" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>