<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/enterprise_white">

    <FrameLayout
        android:id="@+id/layoutContentActivityContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/layoutContentActivityBottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutContentActivityBottom"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="@drawable/bg_layout_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btContentActivityUserInfo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/user_info"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btContentActivitySettings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btContentActivityUserInfo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btContentActivityUserCheck"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/user_check"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btContentActivitySettings"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btContentActivityUserList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/user_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>